--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,17 +5,25 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-busboy": "0.0.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "event-stream": "^4.0.1",
+    "excel-stream": "^1.1.1",
     "express": "^4.17.1",
+    "formidable": "^1.2.2",
     "mongoose": "^5.11.6",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "node-excel-stream": "^1.2.1",
+    "nodemon": "^2.0.6",
+    "read-excel-file": "^4.1.0"
   },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC"
