--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mongoose": "^5.11.6",
+    "mongoose-paginate-v2": "^1.3.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-excel-stream": "^1.2.1",
