--- a/amazon-search/package.json
+++ b/amazon-search/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.19.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetable-2": "^2.0.0-beta.4",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
