--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,8 +12,10 @@
     "event-stream": "^4.0.1",
     "excel-stream": "^1.1.1",
     "express": "^4.17.1",
+    "firstline": "^2.0.2",
     "formidable": "^1.2.2",
     "mongoose": "^5.11.6",
+    "mongoose-aggregate-paginate-v2": "^1.0.42",
     "mongoose-paginate-v2": "^1.3.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
